k8s-deploy/seg-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: seg-deployment
  labels:
    app: seg
spec:
  replicas: 1
  selector:
    matchLabels:
      app: seg
  template:
    metadata:
      labels:
        app: seg
    spec:
      containers:
      - name: seg-c
        image: 192.168.4.99:8443/ai/cortex-cpu-test:may
        imagePullPolicy: Always
        resources:
          limits:
            nvidia.com/gpu: 1
        ports:
          - containerPort: 8888
        volumeMounts:
        - name: workspacedir
          mountPath: "/mnt/workspace"
        - name: projectdir
          mountPath: "/mnt/project"
      volumes:
      - name: workspacedir
        emptyDir: {}
      - name: projectdir
        emptyDir: {}
