k8s-deploy/clscommon-ds.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: clscommon-deployment
  labels:
    app: clscommon
spec:
  replicas: 1
  selector:
    matchLabels:
      app: clscommon
  template:
    metadata:
      labels:
        app: clscommon
    spec:
      containers:
      - name: clscommon-e
        image: 192.168.4.99:8443/ai/cortex-gpu-test:may
        imagePullPolicy: IfNotPresent
        resources:
          limits:
            aliyun.com/gpu-mem: 8
        ports:
          - containerPort: 8888
        livenessProbe:
          httpGet:
            path: /
            port: 8888
            httpHeaders:
              - name: Content-Type
                value: application/json
          failureThreshold: 15
          periodSeconds: 60
        readinessProbe:
          httpGet:
            path: /
            port: 8888
            httpHeaders:
              - name: Content-Type
                value: application/json
          failureThreshold: 3
          periodSeconds: 60
        startupProbe:
          httpGet:
            path: /
            port: 8888
            httpHeaders:
              - name: Content-Type
                value: application/json
          initialDelaySeconds: 30
          failureThreshold: 50
          periodSeconds: 15
        volumeMounts:
        - name: workspacedir
          mountPath: "/mnt/workspace"
        - name: projectdir
          mountPath: "/mnt/project"
      volumes:
      - name: workspacedir
        emptyDir: {}
      - name: projectdir
        emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: clscommon-service
spec:
  selector:
    app: clscommon
  ports:
    - protocol: TCP
      port: 9999
      targetPort: 8888
