k8s-deploy/insightface-ds.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: insightface-deployment
  labels:
    app: insightface
spec:
  replicas: 2
  selector:
    matchLabels:
      app: insightface
  template:
    metadata:
      labels:
        app: insightface
    spec:
      containers:
      - name: insightface-rest
        image: 192.168.4.99:8443/ai/insightface-rest:v0.5.9.9a
        imagePullPolicy: IfNotPresent
        resources:
          limits:
            aliyun.com/gpu-mem: 5
        ports:
          - containerPort: 18080
---
apiVersion: v1
kind: Service
metadata:
  name: insightface-service
spec:
  selector:
    app: insightface
  ports:
    - protocol: TCP
      port: 8082
      targetPort: 18080
