k8s-deploy/seg-ds.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: seg-deployment
  labels:
    app: seg
spec:
  replicas: 1
  selector:
    matchLabels:
      app: seg
  template:
    metadata:
      labels:
        app: seg
    spec:
      containers:
      - name: seg-c
        image: 192.168.4.99:8443/ai/cortex-cpu-test:may
        imagePullPolicy: Always
        ports:
          - containerPort: 8888
        livenessProbe:
          httpGet:
            path: /
            port: 8888
          failureThreshold: 15
          periodSeconds: 60
        readinessProbe:
          httpGet:
            path: /
            port: 8888
            httpHeaders:
              - name: Content-Type
                value: application/json
          failureThreshold: 3
          periodSeconds: 60
        startupProbe:
          httpGet:
            path: /
            port: 8888
          initialDelaySeconds: 30
          failureThreshold: 50
          periodSeconds: 15
        volumeMounts:
        - name: workspacedir
          mountPath: "/mnt/workspace"
        - name: projectdir
          mountPath: "/mnt/project"
      volumes:
      - name: workspacedir
        emptyDir: {}
      - name: projectdir
        emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: seg-service
spec:
  selector:
    app: seg
  ports:
    - protocol: TCP
      port: 9999
      targetPort: 8888
