k8s-deploy/seg-service.yml
apiVersion: v1
kind: Service
metadata:
  name: seg-service
spec:
  selector:
    app: seg
  ports:
    - protocol: TCP
      port: 9999
      targetPort: 8888
