k8s-deploy/sembeddings-ds.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sembeddings-deployment
  labels:
    app: sembeddings
spec:
  replicas: 4
  selector:
    matchLabels:
      app: sembeddings
  template:
    metadata:
      labels:
        app: sembeddings
    spec:
      containers:
      - name: sembeddings-g
        image: 192.168.4.99:8443/ai/cortex-gpu-test:may
        imagePullPolicy: IfNotPresent
        resources:
          limits:
            nvidia.com/gpu: 1
        ports:
          - containerPort: 8888
        livenessProbe:
          httpGet:
            path: /
            port: 8888
            httpHeaders:
              - name: Content-Type
                value: application/json
          failureThreshold: 2
          periodSeconds: 15
        startupProbe:
          httpGet:
            path: /
            port: 8888
            httpHeaders:
              - name: Content-Type
                value: application/json
          initialDelaySeconds: 30
          failureThreshold: 50
          periodSeconds: 15
        volumeMounts:
        - name: workspacedir
          mountPath: "/mnt/workspace"
        - name: projectdir
          mountPath: "/mnt/project"
      volumes:
      - name: workspacedir
        emptyDir: {}
      - name: projectdir
        emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: sembeddings-service
spec:
  selector:
    app: sembeddings
  ports:
    - protocol: TCP
      port: 9999
      targetPort: 8888
