k8s-deploy/summary-ds.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: summary-deployment
  labels:
    app: summary
spec:
  replicas: 1
  selector:
    matchLabels:
      app: summary
  template:
    metadata:
      labels:
        app: summary
    spec:
      containers:
      - name: summary-f
        image: 192.168.4.99:8443/ai/cortex-gpu-test:may
        imagePullPolicy: IfNotPresent
        resources:
          limits:
            nvidia.com/gpu: 1
        ports:
          - containerPort: 8888
        livenessProbe:
          httpGet:
            path: /
            port: 8888
            httpHeaders:
              - name: Content-Type
                value: application/json
          failureThreshold: 2
          periodSeconds: 15
        startupProbe:
          httpGet:
            path: /
            port: 8888
            httpHeaders:
              - name: Content-Type
                value: application/json
          initialDelaySeconds: 30
          failureThreshold: 50
          periodSeconds: 15
        volumeMounts:
        - name: workspacedir
          mountPath: "/mnt/workspace"
        - name: projectdir
          mountPath: "/mnt/project"
      volumes:
      - name: workspacedir
        emptyDir: {}
      - name: projectdir
        emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: summary-service
spec:
  selector:
    app: summary
  ports:
    - protocol: TCP
      port: 9999
      targetPort: 8888
