k8s-deploy/trans-ds.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: trans-deployment
  labels:
    app: trans
spec:
  replicas: 2
  selector:
    matchLabels:
      app: trans
  template:
    metadata:
      labels:
        app: trans
    spec:
      containers:
      - name: trans-d
        image: 192.168.4.99:8443/ai/dl-nlp-base:v1.0
        imagePullPolicy: IfNotPresent
        resources:
          limits:
            aliyun.com/gpu-mem: 5
        ports:
          - containerPort: 8888
        livenessProbe:
          httpGet:
            path: /
            port: 8888
            httpHeaders:
              - name: Content-Type
                value: application/json
          failureThreshold: 15
          periodSeconds: 60
        readinessProbe:
          httpGet:
            path: /
            port: 8888
            httpHeaders:
              - name: Content-Type
                value: application/json
          failureThreshold: 3
          periodSeconds: 60
        startupProbe:
          httpGet:
            path: /
            port: 8888
            httpHeaders:
              - name: Content-Type
                value: application/json
          initialDelaySeconds: 30
          failureThreshold: 50
          periodSeconds: 15
        volumeMounts:
        - name: workspacedir
          mountPath: "/mnt/workspace"
        - name: projectdir
          mountPath: "/mnt/project"
      volumes:
      - name: workspacedir
        emptyDir: {}
      - name: projectdir
        emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: trans-service
spec:
  selector:
    app: trans
  ports:
    - protocol: TCP
      port: 9999
      targetPort: 8888
