k8s-deploy/traefik-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ai-services
  annotations:
    traefik.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: /face
        pathType: Prefix
        backend:
          service:
            name: insightface-service
            port:
              number: 8082
      - path: /seg
        pathType: Prefix
        backend:
          service:
            name: seg-service
            port:
              number: 9999
      - path: /trans
        pathType: Prefix
        backend:
          service:
            name: trans-service
            port:
              number: 9999
      - path: /cls
        pathType: Prefix
        backend:
          service:
            name: clscommon-service
            port:
              number: 9999
